src/styles/layout.less
@import './globals.less';

.places {
    height: 100%;
    height: -webkit-fill-available;
}

.places__menu {
    height: 52px;
    background-color: @background-color-primary;
}

.places__gallery,
.location-item-full-view,
.location-item-submission-view,
.location-item-edit-view {
    background-color: @color-boring;
    z-index: @z-index-gallery;
}

.places__map {
    width: 100vw;
    height: calc(100vh - 52px);
}

.location-item-full-view--open {
    z-index: @z-index-full-item-view;
}

.location-item-submission-view--open,
.location-item-edit-view--open {
    z-index: @z-index-add-edit-view;
}

.location-item-full-view,
.location-item-submission-view,
.location-item-edit-view {
    display: block;
    position: absolute;
    height: calc(100vh - 52px);
    transform: translateX(@sidebar-width-mobile-minus);
    transition: all 150ms ease-out;
    padding: 10px;
    width: @sidebar-width-mobile;

    &.location-item-full-view--open,
    &.location-item-submission-view--open,
    &.location-item-edit-view--open {
        position: absolute;
        transform: translateX(0);
    }
}

/* Mobiles */
@media screen and (max-width: @breakpoint-mobile) {
    .places__gallery {
        display: block;
        position: absolute;
        height: calc(100% - 52px);
        transform: translateX(@sidebar-width-mobile-minus);
        transition: all 150ms ease-out;
        width: @sidebar-width-mobile;
        //background: #fefefe;

        &.places__gallery--open {
            display: flex;
            flex-direction: column;
            transform: translateX(0);
            width: @sidebar-width-mobile;

            ~ .places__map {
                transform: translateX(280px);
                width: calc(100vw - 280px);
            }
        }
    }

    .location-item-full-view,
    .location-item-submission-view,
    .location-item-edit-view {
        width: @sidebar-width-mobile;

        &.location-item-full-view--open,
        &.location-item-submission-view--open,
        &.location-item-edit-view--open {
            ~ .places__map {
                transform: translateX(280px);
                width: calc(100vw - 280px);
            }
        }
    }

    .places__map {
        transition: all 150ms ease-out;
    }
}

/* Tablets */
@media screen and (min-width: @breakpoint-tablet) {
    .places {
        height: 100%;
        display: grid;
        grid-template-columns: @sidebar-width-tablet repeat(3, 1fr);
        grid-template-rows: 70px repeat(2, 100%);
        flex-wrap: wrap;
        grid-template-areas:
            'Menu Menu Menu Menu'
            'Gallery Map Map Map'
            'Gallery Map Map Map';
    }

    .places__gallery {
        display: block;
        grid-area: Gallery;
    }

    .places__menu {
        grid-area: Menu;
        height: 70px;
    }

    .places__map {
        height: calc(100vh - 70px);
        grid-area: Map;
        width: 100%;
    }

    .location-item-full-view,
    .location-item-submission-view,
    .location-item-edit-view {
        top: 70px;
        height: calc(100vh - 70px);
        transform: translateX(@sidebar-width-tablet-minus);
        width: @sidebar-width-tablet;

        &.location-item-full-view--open,
        &.location-item-submission-view--open,
        &.location-item-edit-view--open {
            transform: translateX(0);
        }
    }
}

/* Desktops */
@media screen and (min-width: @breakpoint-desktop) {
    .places {
        grid-template-columns: @sidebar-width-desktop repeat(3, 1fr);
    }

    .location-item-full-view,
    .location-item-submission-view,
    .location-item-edit-view {
        top: 70px;
        height: calc(100vh - 70px);
        width: @sidebar-width-desktop;
        transform: translateX(@sidebar-width-desktop-minus);

        &.location-item-full-view--open,
        &.location-item-submission-view--open,
        &.location-item-edit-view--open {
            transform: translateX(0);
        }
    }
}

